--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_iconly: ^1.0.2
   fancy_shimmer_image: ^2.0.2
+  shimmer: ^3.0.0
   # Management
   provider: ^6.0.3
   shared_preferences: ^2.0.15
