shimmer effect loading widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_iconly: ^1.0.2
   fancy_shimmer_image: ^2.0.2
   shimmer: ^3.0.0
+  card_swiper: ^3.0.1
   # Management
   provider: ^6.0.3
   shared_preferences: ^2.0.15
