--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fancy_shimmer_image: ^2.0.2
   shimmer: ^3.0.0
   card_swiper: ^3.0.1
+  page_transition: ^2.0.9
   # Management
   provider: ^6.0.3
   shared_preferences: ^2.0.15
