--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shimmer: ^3.0.0
   card_swiper: ^3.0.1
   page_transition: ^2.0.9
+  flutter_staggered_grid_view: ^0.6.2
   # Management
   provider: ^6.0.3
   shared_preferences: ^2.0.15
