--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   card_swiper: ^3.0.1
   page_transition: ^2.0.9
   flutter_staggered_grid_view: ^0.6.2
+  webview_flutter: ^3.0.4
+  
   # Management
   provider: ^6.0.3
   shared_preferences: ^2.0.15
