--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dependencies:
   page_transition: ^2.0.9
   flutter_staggered_grid_view: ^0.6.2
   webview_flutter: ^3.0.4
-  
+  # Social
+  share_plus: ^7.0.2
+  url_launcher: ^6.1.12
   # Management
   provider: ^6.0.3
   shared_preferences: ^2.0.15
