show readTime and format dateToShow

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,8 @@ dependencies:
   google_fonts: ^4.0.4
 
   http: ^1.1.0
-
+  reading_time: ^2.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
